refactoring jnuit coverage.